# HTTP-Server

./: README.md
rsc/: 404.html  colors.html  index.html  maze.html  style.css
rsc/animation/: bread.html  coding.html  orbit.html  searchbarAnimation.html  star.html  train.html
rsc/css/: maze.css
rsc/game/: chatnoir.html  snake.html
rsc/images/: main.c
rsc/js/: maze.js
src/: CMakeLists.txt  client.c  config.c  config.h  config.txt  cursed  edit-config.c  edit-config.h  edit-config.txt  editconfig.c  editconfig.h  nc.c  process-server.c  server.c  shared.h  stdio.h  todo.txt
src/config/: config.c  config.h
src/http/: message.c  message.h  request.c  request.h  response.c  response.h
src/ncurses/: line.c  line.h  page.c  page.h  prompt.c
src/server/: pool.c  pool.h  process-server.c  process_pool.c  process_pool.h  shared_mutex.c  shared_mutex.h  thread_pool.c  thread_pool.h  threads.h
src/sys/: mman.h
src/util/: message.c
